# HRI_MAE502

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: datarecord.cpp  gripper_demo.cpp  teach_gripper.cpp
